--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -35,12 +35,14 @@ textarea, input, select {
 
 #content {
   background: #fff;
-  width: 838px;
   border: 1px solid #bdafac;
   box-shadow: 0 0 2px;
   border-radius: 5px;
-  display: table;
-  padding: 30px 30px 0 30px;
+  width: 898px;
+}
+
+#content-elements {
+  margin: 30px 30px 30px 30px;
 }
 
 #logo {
@@ -244,17 +246,21 @@ textarea, input, select {
   margin: 0 0 30px 0;
 }
 
+h1.post-title {
+  font-size: 1em;
+  font-weight: bold;
+  margin: 0 0 5px 0;
+}
+
 .post-title a {
   color: #655f63;
-  font-size: 0.7em;
-  font-weight: bold;
 }
 
 .post-info {
   color: #bdafac;
   font-size: 0.6em; 
   border-bottom: 1px dashed;
-  margin: 0 0 20px 0;
+  margin: 0 0 30px 0;
   padding: 0 0 5px 0;
 }
 
