--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, t('layouts.application.search') + t(:title) %>
+<% content_for :title, [t('layouts.application.search'), t(:title)].join(' - ') %>
 
 <div class="search-posts">
   <%= t('.search_posts') + ' ' %>"<b><%= params[:query] %></b>" (<%= t('.count') + ' ' + @posts.count.to_s %>)
