--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, @post.title + t(:title) %>
+<% content_for :title, [@post.title, t(:title)].join(' - ')  %>
 
 <% content_for :jscript do %>
   <% javascript_include_tag 'showdown', 'wmd' %>
