--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, @tag.name + t(:title) %>
+<% content_for :title, [@tag.name, t(:title)].join(' - ') %>
 
 <div class="tag-posts">
   <%= t('.tag_posts') + ' ' %>"<b><%= @tag.name %></b>" (<%= t('.count') + ' ' + @posts.count.to_s %>)
