--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
       <div id="pages-menu">
         <ul>
           <li><%= link_to_unless current_page?(root_path), t('.posts'), root_path %></li>
+          <li><%= link_to t('.mailme'), 'mailto:rezwyi@gmail.com' %></li>
           <li class="last"><%= link_to_unless current_page?(pages_about_path), t('.about'), pages_about_path %></li>
         </ul>
 
@@ -58,7 +59,7 @@
       <%= link_to t('social.github'), 'http://github.com/rezwyi'.html_safe, :target => 'blank' %>
       <%= link_to t('social.twitter'), 'http://twitter.com/rezwyi'.html_safe, :target => 'blank' %>
 
-      <a class="feedburner" target="blank" href="http://feeds.feedburner.com/2bytes">
+      <a class="feedburner" target="blank" href="http://feeds.feedburner.com/2bytes" title="<%= t(:rss) %>">
         <img src="http://feeds.feedburner.com/~fc/2bytes?bg=BDAFAC&amp;fg=444444&amp;anim=0" height="26" width="88" style="border:0" alt="" />
       </a>
 
