--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <div id="wrapper">
     <div id="header">
       <div id="logo">
-        <%= link_to_unless current_page?(root_url), t(:logo), root_url %>
+        <%= link_to_unless current_page?(root_url), 'Rezvanov<span>.info</span>'.html_safe, root_url %>
       </div>
 
       <div id="manage-menu">
@@ -55,12 +55,13 @@
       <%= link_to image_tag('http://i.creativecommons.org/l/by-sa/3.0/80x15.png', :alt => 'Creative Commons License'), 'http://creativecommons.org/licenses/by-sa/3.0/'.html_safe, :style => 'border:none', :target => 'blank' %>
       <span><%= t(:copyright) %>.</span>
       <span><%= t(:follow) %>:</span>
+
       <%= link_to t('social.linkedin'), 'http://ru.linkedin.com/pub/sergey-rezvanov/32/b69/974'.html_safe, :target => 'blank' %>
       <%= link_to t('social.github'), 'http://github.com/rezwyi'.html_safe, :target => 'blank' %>
       <%= link_to t('social.twitter'), 'http://twitter.com/rezwyi'.html_safe, :target => 'blank' %>
 
-      <a class="feedburner" target="blank" href="http://feeds.feedburner.com/2bytes" title="<%= t(:rss) %>">
-        <img src="http://feeds.feedburner.com/~fc/2bytes?bg=BDAFAC&amp;fg=444444&amp;anim=0" height="26" width="88" style="border:0" alt="" />
+      <a class="feedburner" target="blank" href="http://feeds.feedburner.com/rezvanov-info" title="<%= t(:rss) %>">
+        <img src="http://feeds.feedburner.com/~fc/rezvanov-info?bg=BDAFAC&amp;fg=444444&amp;anim=0" height="26" width="88" style="border:0" alt="" />
       </a>
 
     </div>
