--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, [t('layouts.application.new'), t(:title)].join(' - ') %>
+<% content_for :title, [t('head.title.new'), t(:title)].join(' - ') %>
 
 <% content_for :jscript do %>
   <% javascript_include_tag 'showdown', 'wmd' %>
