--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, [t('layouts.application.posts'), t(:title)].join(' - ') %>
+<% content_for :title, [t('head.title.posts'), t(:title)].join(' - ') %>
 
 <% content_for :pagination do %>
   <%= render 'pagination' %>
