--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,3 @@
-<% content_for :title, [@post.title, t(:title)].join(' - ') %>
+<% content_for :title, ["'#{@post.title}'", t(:title)].join(' - ') %>
 
 <%= render @post %>
