--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
   <div id="manage-menu">
     <ul>
       <% if current_user %>
-        <li>
+        <li class="first">
           <%= link_to_unless current_page?(new_post_path), t('.new') , new_post_path %>
         </li>
         <li>
@@ -25,7 +25,7 @@
   
   <div id="pages-menu">
     <ul>
-      <li>
+      <li class="first">
         <%= link_to_unless current_page?(root_path), t('.posts'), root_path %>
       </li>
       <li>
