--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,25 +1,37 @@
+<% content_for :comments do %>
+  <%= content_tag :div, nil, :id => 'disqus_thread' if current_page?(post_path(post)) %>
+<% end %>
+
+<% content_for :javascripts do %>
+  <script type="text/javascript">
+    var disqus_shortname = 'rezvanovinfo';
+    var disqus_developer = 1;
+
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+  </script>
+<% end %>
+
 <div id="post-<%= post.id %>" class="post">
   <h1 class="post-title">
     <%= link_to post.title, post %>
   </h1>
 
   <div class="post-info">
-    <% unless post.user.blank? %>
-      <span class="post-author">
-        <%= post.user.name %>
-      </span>
-    <% end %>
-
     <span class="post-pubdate">
-      |
       <%= post.published_at.strftime(t('date.formats.default')) %>
     </span>
 
     <% unless post.tags.blank? %>
+      <span class="post-tags">
         |
         <% post.tags.each do |tag| %>
           <%= link_to tag.name, tag, :class => 'tag-link' %>
         <% end %>
+      </span>
     <% end %>
   </div>
 
