--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, ["#{t('head.title.edit')} '#{@post.title}'", t(:title)].join(' - ')  %>
 
-<% content_for :jscript do %>
+<% content_for :javascripts do %>
   <% javascript_include_tag 'showdown', 'wmd' %>
 <% end %>
 
