--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, [t('head.title.new'), t(:title)].join(' - ') %>
 
-<% content_for :jscript do %>
+<% content_for :javascripts do %>
   <% javascript_include_tag 'showdown', 'wmd' %>
 <% end %>
 
