Changed follow links

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,15 +4,15 @@
               'http://creativecommons.org/licenses/by-sa/3.0/'.html_safe,
               :style => 'border:none', :target => 'blank' %>
   <span><%= t(:copyright) %>.</span>
-  <span><%= t(:follow) %>:</span>
+  <span><%= t(:follow) %>:</span>&nbsp;
 
-  <%= link_to t('social.linkedin'),
-              'http://ru.linkedin.com/pub/sergey-rezvanov/32/b69/974'.html_safe,
-              :target => 'blank' %>
-  <%= link_to t('social.github'),
-              'http://github.com/rezwyi'.html_safe,
-              :target => 'blank' %>
   <%= link_to t('social.twitter'),
               'http://twitter.com/rezwyi'.html_safe,
-              :target => 'blank' %>
+              :target => 'blank' %>&nbsp;
+  <%= link_to t('social.github'),
+              'http://github.com/rezwyi'.html_safe,
+              :target => 'blank' %>&nbsp;
+  <%= link_to t('social.flickr'),
+              'http://flickr.com/photos/rezwyi'.html_safe,
+              :target => 'blank' %>&nbsp;
 </div>
