--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,12 +1,12 @@
-<div class="post-form-top">
-  <div class="post-form-top-left">
-    <p><%= form.label :title, t('.title') %></p>
+<div class="form-top">
+  <div class="form-top-left">
+    <p><%= form.label :title, t('common.title') %></p>
     <p><%= form.text_field :title, :autofocus => true %></p>
-    <p><%= form.label :published_at, t('.publish_date') %></p>
+    <p><%= form.label :published_at, t('common.published_at') %></p>
     <p><%= form.date_select :published_at, :default => Time.now %></p>
   </div>
 
-  <div class="post-form-top-right">
+  <div class="form-top-right">
     <p><%= form.label :tag_names, t('.tags') %></p>
     <p><%= form.text_field :tag_names %></p>
 
@@ -20,6 +20,6 @@
   </div>
 </div>
 
-<div class="post-form-bottom">
+<div class="form-bottom">
   <%= form.text_area :markdown, :id => 'wmd-input' %>
 </div>
