--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -4,13 +4,13 @@
   <% javascript_include_tag 'showdown', 'wmd' %>
 <% end %>
 
-<div class="post-form">
+<div class="form">
   <%= form_for @post do |form| %>
     <%= render :partial => 'form', :locals => { :form => form } %>
     <%= render :partial => 'preview', :locals => { :post => @post } %>
-    <div class="post-form-buttons">
-      <%= form.submit t('.save'), :class => 'button' %>
-      <%= link_to t('.back'), :back %>
+    <div class="form-buttons">
+      <%= form.submit t('common.save'), :class => 'button' %>
+      <%= link_to t('common.back'), :back %>
     </div>
   <% end %>
 </div>
