--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
-<% content_for :title, [t('head.title.posts'), t(:title)].join(' - ') %>
+<% content_for :title, [t('common.posts'), t(:title)].join(' - ') %>
 
 <% content_for :pagination do %>
-  <%= render 'pagination' %>
+  <%= render :partial => 'shared/pagination', :locals => { :items => @posts } %>
 <% end %>
 
 <%= render @posts %>
