--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -214,6 +214,7 @@ textarea, input, select {
 }
 
 #footer {
+  clear: both;
   height: 30px;
   font-size: 0.6em;
   margin: 60px 0 30px 0;
@@ -557,7 +558,7 @@ textarea, input, select {
 
 .recently-items ol {
   width: 300px;
-  margin: 0 0 0 50px;
+  margin: 0 0 60px 50px;
 }
 
 .recently-items ol li.last {
