--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -31,6 +31,13 @@ blockquote {
   padding: 0;
 }
 
+#gh-ribbon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 0;
+}
+
 #wrapper {
   width: 900px;
   margin: 0 auto;
