--- a/app/views/pages/_manage_posts.html.erb
+++ b/app/views/pages/_manage_posts.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, [t('head.title.manage_posts'), t(:title)].join(' - ') %>
+<% content_for :title, title(t('head.title.manage_posts')) %>
 
 <%
   t_datetime = t('date.formats.datetime')
