--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, [t(:welcome), t(:title)].join(' - ') %>
+<% content_for :title, title(t(:welcome)) %>
 
 <div class="about">
   <div class="avatar">
