--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, [t('common.posts'), t(:title)].join(' - ') %>
+<% content_for :title, title(t('common.posts')) %>
 
 <% content_for :pagination do %>
   <%= render :partial => 'shared/pagination', :locals => { :items => @posts } %>
