--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, ["#{t('head.title.edit')} '#{@project.title}'", t(:title)].join(' - ')  %>
+<% content_for :title, title("#{t('head.title.edit')} '#{@project.title}'")  %>
 
 <div class="form">
   <%= form_for @project do |form| %>
