--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,3 @@
-<% content_for :title, [t('common.projects'), t(:title)].join(' - ') %>
+<% content_for :title, title(t('common.projects')) %>
 
 <%= render @projects %>
