--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,3 @@
-<% content_for :title, ["'#{@project.title}'", t(:title)].join(' - ') %>
+<% content_for :title, title("'#{@project.title}'") %>
 
 <%= render @project %>
