--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -8,8 +8,12 @@
     <p><%= project.description %></p>
 
     <div class="read-more">
-      <%= link_to t('.production_url'), project.production_url if project.production_url.present? %>
-      <%= link_to t('.source_url'), project.source_url if project.source_url.present? %>
+      <%= link_to t('.production_url'),
+                  project.production_url,
+                  :target => 'blank' if project.production_url.present? %>
+      <%= link_to t('.source_url'),
+                  project.source_url,
+                  :target => 'blank' if project.source_url.present? %>
     </div>
   </div>
 </div>
