Adding jQuery to the javascript files

--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -2,7 +2,7 @@
   <title><%= yield :title %></title>
 
   <%= stylesheet_link_tag 'application', 'zenburn' %>
-  <%= javascript_include_tag 'application', 'highlight.pack' %>
+  <%= javascript_include_tag :defaults, 'highlight.pack' %>
   <%= csrf_meta_tag %>
 
   <link rel="shortcut icon" href="/favicon.ico" />
