--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -239,12 +239,27 @@ blockquote {
   vertical-align: middle;
 }
 
-#footer a.feedburner {
+#login-link {
+  color: #655f63;
   float: right;
-  border-bottom: none;
+  font-size: 0.6em;
+  margin: 5px 0 0 0;
 }
 
-#login-form label {
+#login-form-modal {
+  display: none;
+  position: absolute;
+  right: 0px;
+  top: 25px;
+  z-index: 10001;
+  background-color: #fff;
+  width: 219px;
+  border: 5px solid #bdafac;
+  border-radius: 15px 0 15px 15px;
+  padding: 15px 15px 0px 15px;
+}
+
+#login-form label, #login-form-modal label {
   font-size: 0.7em;
   font-weight: bold;
 }
@@ -328,7 +343,6 @@ blockquote {
   color: #655f63;
   font-size: 0.7em;
 }
-
 
 .login-form-buttons {
   margin: 30px 0 30px 0;
