--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,16 +4,6 @@
               'http://creativecommons.org/licenses/by-sa/3.0/'.html_safe,
               :style => 'border:none', :target => 'blank' %>
   <span>
-    <%= "#{t(:copyright)} 2011#{('-' + Time.now.year.to_s) if Time.now.year.to_i > 2011}" %>.
+    <%= "#{t(:copyright)} 2011#{('-' + Time.now.year.to_s) if Time.now.year.to_i > 2011}" %>
   </span>
-  <span><%= t(:follow) %></span>
-
-  <%= link_to t('social.twitter'),
-              'http://twitter.com/rezwyi'.html_safe,
-              :target => 'blank',
-              :class => 'icon-twitter' %>
-  <%= link_to t('social.flickr'),
-              'http://flickr.com/photos/rezwyi'.html_safe,
-              :target => 'blank',
-              :class => 'icon-flickr' %>
 </div>
