Added helper for copyright years

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,6 +4,6 @@
               'http://creativecommons.org/licenses/by-sa/3.0/'.html_safe,
               :style => 'border:none', :target => 'blank' %>
   <span>
-    <%= "#{t(:copyright)} 2011#{('-' + Time.now.year.to_s) if Time.now.year.to_i > 2011}" %>
+    <%= "#{t(:copyright)} #{copyright_years}" %>
   </span>
 </div>
