Fixed bug with the search

--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, title(t('common.search')) %>
 
 <div class="search-posts">
-  <%= t('.search_posts') + ' ' %>"<b><%= params[:q] %></b>" (<%= t('common.count') + ' ' + @posts.count.to_s %>)
+  <%= t('.search_posts') + ' ' %>"<b><%= params[:query] %></b>" (<%= t('common.count') + ' ' + @posts.count.to_s %>)
 </div>
 
 <%= render @posts %>
